force-app/main/default/objects/Expense_Item__c/fields/Attendance_Status__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Status__c</fullName>
    <label>Attendance Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Present</fullName><default>false</default><label>Present</label></value>
            <value><fullName>Absent</fullName><default>false</default><label>Absent</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>