force-app/main/default/objects/Expense_Item__c/fields/Hotel_Stay_Type__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Stay_Type__c</fullName>
    <label>Hotel Stay Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Hotel (Booked)</fullName><default>false</default><label>Hotel (Booked)</label></value>
            <value><fullName>Own Accommodation</fullName><default>false</default><label>Own Accommodation</label></value>
            <value><fullName>None</fullName><default>false</default><label>None</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>