force-app/main/default/objects/Expense_Item__c/fields/Own_Accommodation__c.field-meta.xml
<CustomField>
    <fullName>Own_Accommodation__c</fullName>
    <label>Own Accommodation (50%)</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>