force-app/main/default/objects/Expense_Item__c/fields/PAX_Names__c.field-meta.xml
<CustomField>
    <fullName>PAX_Names__c</fullName>
    <label>PAX Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>