force-app/main/default/objects/Expense_Item__c/fields/Vehicle_Reading_End__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Reading_End__c</fullName>
    <label>Vehicle Reading End</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
</CustomField>